# feedinlib

./: CONTRIBUTING.rst  pyproject.toml  tox.ini
.github/workflows/: packaging.yml
src/feedinlib/: __init__.py  cds_request_tools.py  era5.py
tests/: test_models.py  test_weather_download.py
tests/resources/: test_data_era5.nc
