[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    ".coveragerc",
    ".editorconfig",
    ".readthedocs.yml",
    "tox.ini",
    "AUTHORS.rst",
    "CHANGELOG.rst",
    "CONTRIBUTING.rst",
    "LICENSE",
    "README.rst",
    "examples/",
    "docs/",
    "src/",
    "tests/",
]
exclude = ["docs/_build", "**/*.egg-info"]

[project]
name = "feedinlib"
dynamic = ["version"]
description = "Connect weather data interfaces with interfaces of wind and pv power models."
readme = "README.rst"
authors = [
    {name = "oemof developer group", email = "contact@oemof.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "cdsapi >= 0.1.4",
    "geopandas",
    "numpy >= 1.17.0",
    "oedialect >= 0.0.6.dev0",
    "pvlib >= 0.7.0",
    "tables",
    "open_FRED-cli",
    "windpowerlib > 0.2.0",
    "pandas >= 1.0",
    "xarray >= 0.12.0",
    "descartes",
    "SQLAlchemy < 1.4.0, >=1.3.0",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://oemof.org"
Documentation = "https://feedinlib.readthedocs.io/"
Changelog = "https://feedinlib.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/oemof/feedinlib/issues"

[project.optional-dependencies]
dev = [
    "jupyter",
    "nbformat",
    "punch.py",
    "pytest",
    "sphinx_rtd_theme",
    "open_FRED-cli"
]
data-sources = [
    "open_FRED-cli",
]
examples = [
    "jupyter",
    "matplotlib",
    "descartes",
]
tox = [
    "tox",
]

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
norecursedirs = [
    ".git",
    ".tox",
    ".env",
    "dist",
    "docs/_build",
    "examples",
]
python_files = [
    "test_*.py",
    "*_test.py",
    "*_tests.py",
    "tests.py",
]
addopts = """
    -ra
    --strict-markers
    --ignore=docs/conf.py
    --ignore=.eggs
    --doctest-modules
    --doctest-glob=\\*.rst
    --tb=short
    --pyargs
"""
testpaths = [
    "src/",
    "tests/",
    "docs/",
]

[tool.isort]
force_single_line = true
line_length = 79
known_first_party = "feedinlib"
default_section = "THIRDPARTY"
forced_separate = "test_feedinlib"
skip = "migrations"
